[package]
name = "api_financa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features =  ["v4", "serde"] }
lazy_static = "1.4"